--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -87,12 +88,18 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "https://kit.fontawesome.com/yourcode.js"
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "1e8cd5b4-7484-4da8-9dae-486fa285743f"
   }
 }
